# 42_DSLR

./: CMakeLists.txt
includes/: csvReader.cpp  csvReader.h
srcs/: logisticRegression.cpp  logisticRegression.h
